[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seamless-box-template"
version = "0.1.0"
description = "A CLI tool to create custom SVG templates for seamless cardboard boxes."
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
requires-python = ">=3.7"
dependencies = [
    "svgwrite>=1.4",
]

[project.scripts]
cbox = "cbox:main"

[tool.setuptools]
py-modules = ["cbox"]
